manifests/upstream/azure-wi-webhook.yaml
---
# Source: workload-identity-webhook/templates/azure-wi-webhook-webhook-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: 'workload-identity-webhook'
    azure-workload-identity.io/system: "true"
    chart: 'workload-identity-webhook'
    release: 'workload-identity-webhook'
  name: azure-wi-webhook-webhook-service
  namespace: 'azure-workload-identity-system'
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 9443
  selector:
    app: 'workload-identity-webhook'
    azure-workload-identity.io/system: "true"
    chart: 'workload-identity-webhook'
    release: 'workload-identity-webhook'
---
# Source: workload-identity-webhook/templates/azure-wi-webhook-controller-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: 'workload-identity-webhook'
    azure-workload-identity.io/system: "true"
    chart: 'workload-identity-webhook'
    release: 'workload-identity-webhook'
  name: azure-wi-webhook-controller-manager
  namespace: 'azure-workload-identity-system'
spec:
  replicas: 2
  selector:
    matchLabels:
      app: 'workload-identity-webhook'
      azure-workload-identity.io/system: "true"
      chart: 'workload-identity-webhook'
      release: 'workload-identity-webhook'
  template:
    metadata:
      annotations:
        {}
      labels:
        app: 'workload-identity-webhook'
        azure-workload-identity.io/system: "true"
        chart: 'workload-identity-webhook'
        release: 'workload-identity-webhook'
    spec:
      affinity:
        {}
      containers:
      - args:
        - --log-level=info
        - --metrics-addr=:8095
        - --metrics-backend=prometheus
        command:
        - /manager
        image: 'mcr.microsoft.com/oss/azure/workload-identity/webhook:v1.3.0'
        imagePullPolicy: 'IfNotPresent'
        livenessProbe:
          failureThreshold: 6
          httpGet:
            path: /healthz
            port: healthz
          initialDelaySeconds: 15
          periodSeconds: 20
        name: manager
        ports:
        - containerPort: 8095
          name: metrics
          protocol: TCP
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        - containerPort: 9440
          name: healthz
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: healthz
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            cpu: 100m
            memory: 30Mi
          requests:
            cpu: 100m
            memory: 20Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 65532
          runAsNonRoot: true
          runAsUser: 65532
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /certs
          name: cert
          readOnly: true
      nodeSelector:
        kubernetes.io/os: linux
      priorityClassName: system-cluster-critical
      serviceAccountName: azure-wi-webhook-admin
      tolerations:
        []
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: azure-wi-webhook-server-cert
---
# Source: workload-identity-webhook/templates/azure-wi-webhook-mutating-webhook-configuration-mutatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    {}
  labels:
    app: 'workload-identity-webhook'
    azure-workload-identity.io/system: "true"
    chart: 'workload-identity-webhook'
    release: 'workload-identity-webhook'
  name: azure-wi-webhook-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: azure-wi-webhook-webhook-service
      namespace: 'azure-workload-identity-system'
      path: /mutate-v1-pod
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: mutation.azure-workload-identity.io
  namespaceSelector:
    {}
  objectSelector:
    matchLabels:
      azure.workload.identity/use: "true"
  reinvocationPolicy: IfNeeded
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: None
